# LocalScribe-AI-Private-On-Device-Speech-Intelligence-Platform

./: .gitattributes  .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
backend/: .env.example  app.py  pyproject.toml  system_prompt.txt  transcription.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: Box.module.css  Box.tsx  ErrorMessage.module.css  ErrorMessage.tsx  Footer.module.css  Footer.tsx  Header.module.css  Header.tsx  RecordButton.module.css  RecordButton.tsx  SettingsPanel.module.css  SettingsPanel.tsx  Spinner.module.css  Spinner.tsx  TextBox.module.css  TextBox.tsx  TextInputZone.module.css  TextInputZone.tsx  TranscriptionResults.module.css  TranscriptionResults.tsx  UploadZone.module.css  UploadZone.tsx
frontend/src/styles/: variables.css
frontend/src/types/: index.ts
